# evervoice

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  external_service.rs  file_storage.rs  global_hotkey.rs  history.rs  lib.rs  main.rs  settings.rs  summarization.rs  transcription.rs
src/app/: globals.css  layout.tsx  page.integration.test.tsx  page.tsx
src/components/: copy-text-button.tsx  custom-action-button.tsx  custom-action-form.tsx  custom-action-list-item.tsx  flag-icon.tsx  history-item.test.tsx  history-item.tsx  history-sidebar.test.tsx  history-sidebar.tsx  index.ts  recording-controls.test.tsx  recording-controls.tsx  recording-indicator.tsx  settings-dialog-custom-actions.test.tsx  settings-dialog.test.tsx  settings-dialog.tsx  summarize-button.test.tsx  summarize-button.tsx  transcribe-button.test.tsx  transcribe-button.tsx  transcription-actions.test.tsx  transcription-display-buttons.test.tsx  transcription-display-tabs.test.tsx  transcription-display.tsx  waveform-canvas.test.tsx  waveform-canvas.tsx
src/hooks/: index.ts  use-audio-playback.test.ts  use-audio-playback.ts  use-audio-recorder.test.ts  use-audio-recorder.ts  use-file-storage.test.ts  use-file-storage.ts  use-global-hotkey.test.ts  use-global-hotkey.ts  use-recording-duration.test.ts  use-recording-duration.ts  use-transcription-history.ts  use-waveform-analyzer.ts
src/lib/: file-storage.test.ts  index.ts  tauri-api.ts  utils.ts
src/stores/: history-store.test.ts  (+7 more)
(+21 files in other folders)
