[package]
name = "evervoice"
version = "0.1.0"
description = "EverVoice - Voice Recording and Transcription App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "evervoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["time"] }
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"
